--- a/mayan/apps/platform/templates/platform/supervisord.tmpl
+++ b/mayan/apps/platform/templates/platform/supervisord.tmpl
@@ -1,7 +1,8 @@
 [supervisord]
 environment=
-    PYTHONPATH="{{ MEDIA_ROOT }}/{{ USER_SETTINGS_FOLDER }}",
+    PYTHONPATH="{{ MEDIA_ROOT }}{{ USER_SETTINGS_FOLDER }}",
     DJANGO_SETTINGS_MODULE=mayan.settings.production,
+    MAYAN_ALLOWED_HOSTS='["*"]',
     MAYAN_MEDIA_ROOT="{{ MEDIA_ROOT }}"
 
 [program:mayan-edms-gunicorn]
