Fix action menu disabled links appearance
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/navigation/templates/navigation/actions_dropdown.html
+++ b/mayan/apps/navigation/templates/navigation/actions_dropdown.html
@@ -29,7 +29,7 @@
             {% with link_group.links as object_navigation_links %}
             {% with 'true' as as_li %}
             {% with 'true' as hide_active_anchor %}
-            {% with 'btn-sm' as link_classes %}
+            {% with 'btn btn-sm navigation-btn-dropdown' as link_classes %}
                 {% include 'navigation/generic_navigation.html' %}
             {% endwith %}
             {% endwith %}
