--- a/mayan/apps/platform/templates/platform/docker_supervisord.tmpl
+++ b/mayan/apps/platform/templates/platform/docker_supervisord.tmpl
@@ -13,7 +13,7 @@ user = mayan
 [program:mayan-edms-{{ worker.name }}]
 autorestart = false
 autostart = true
-command = nice -n {{ worker.nice_level }} /bin/bash -c "${MAYAN_PYTHON_BIN_DIR}celery worker -A mayan -Ofair -l ERROR -Q {% for queue in worker.queues %}{{ queue.name }}{% if not forloop.last %},{% endif %}{% endfor %} -n mayan-edms-{{ worker.name }}.%%h ${MAYAN_{{ worker.name|upper }}_CONCURRENCY}"
+command = nice -n {{ worker.nice_level }} /bin/bash -c "${MAYAN_PYTHON_BIN_DIR}celery worker -A mayan -Ofair -l ERROR -Q {% for queue in worker.queues %}{{ queue.name }}{% if not forloop.last %},{% endif %}{% endfor %} -n mayan-edms-{{ worker.name }}.%%h ${MAYAN_{{ worker.name|upper }}_CONCURRENCY} ${MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD} ${MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD}"
 killasgroup = true
 numprocs = 1
 priority = 998
