Improve platform templates markup
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/platform/templates/platform/docker_entrypoint.tmpl
+++ b/mayan/apps/platform/templates/platform/docker_entrypoint.tmpl
@@ -10,11 +10,11 @@ CELERY_CONCURRENCY_ARGUMENT=--concurrency=
 CELERY_MAX_MEMORY_PER_CHILD=--max-memory-per-child=
 CELERY_TASKS_MEMORY_PER_CHILD=--max-tasks-per-child=
 
-DEFAULT_USER_UID=1000
 DEFAULT_USER_GID=1000
+DEFAULT_USER_UID=1000
 
-MAYAN_USER_UID=${MAYAN_USER_UID:-${DEFAULT_USER_UID}}
 MAYAN_USER_GID=${MAYAN_USER_GID:-${DEFAULT_USER_GID}}
+MAYAN_USER_UID=${MAYAN_USER_UID:-${DEFAULT_USER_UID}}
 
 export MAYAN_ALLOWED_HOSTS='["*"]'
 export MAYAN_BIN=/opt/mayan-edms/bin/mayan-edms.py
@@ -29,6 +29,7 @@ export DJANGO_SETTINGS_MODULE=${MAYAN_SETTINGS_MODULE}
 
 export MAYAN_GUNICORN_BIN=${MAYAN_PYTHON_BIN_DIR}gunicorn
 export MAYAN_GUNICORN_JITTER=${MAYAN_GUNICORN_JITTER:-{{GUNICORN_JITTER}}}
+export MAYAN_GUNICORN_LIMIT_REQUEST_LINE=${MAYAN_GUNICORN_LIMIT_REQUEST_LINE:-{{GUNICORN_LIMIT_REQUEST_LINE}}}
 export MAYAN_GUNICORN_MAX_REQUESTS=${MAYAN_GUNICORN_MAX_REQUESTS:-{{GUNICORN_MAX_REQUESTS}}}
 export MAYAN_GUNICORN_WORKER_CLASS=${MAYAN_GUNICORN_WORKER_CLASS:-{{GUNICORN_WORKER_CLASS}}}
 export MAYAN_GUNICORN_WORKERS=${MAYAN_GUNICORN_WORKERS:-{{GUNICORN_WORKERS}}}
