--- a/mayan/apps/platform/templates/platform/docker_supervisord.tmpl
+++ b/mayan/apps/platform/templates/platform/docker_supervisord.tmpl
@@ -1,40 +1,1 @@
-[program:mayan-edms-gunicorn]
-autorestart = false
-autostart = true
-command = /bin/bash -c "${MAYAN_GUNICORN_BIN} --workers ${MAYAN_GUNICORN_WORKERS} ${MAYAN_GUNICORN_TEMPORARY_DIRECTORY} mayan.wsgi --max-requests ${MAYAN_GUNICORN_MAX_REQUESTS} --max-requests-jitter ${MAYAN_GUNICORN_JITTER} --worker-class ${MAYAN_GUNICORN_WORKER_CLASS} --bind 0.0.0.0:8000 --env DJANGO_SETTINGS_MODULE=${MAYAN_SETTINGS_MODULE} --timeout ${MAYAN_GUNICORN_TIMEOUT} --limit-request-line ${MAYAN_GUNICORN_LIMIT_REQUEST_LINE}"
-redirect_stderr = true
-stderr_logfile = /dev/fd/2
-stderr_logfile_maxbytes = 0
-stdout_logfile = /dev/fd/1
-stdout_logfile_maxbytes = 0
-user = mayan
-{% for worker in workers %}
-[program:mayan-edms-{{ worker.name }}]
-autorestart = false
-autostart = true
-command = nice -n {{ worker.nice_level }} /bin/bash -c "${MAYAN_PYTHON_BIN_DIR}celery worker -A mayan -Ofair -l ERROR -Q {% for queue in worker.queues %}{{ queue.name }}{% if not forloop.last %},{% endif %}{% endfor %} -n mayan-edms-{{ worker.name }}.%%h ${MAYAN_{{ worker.name|upper }}_CONCURRENCY} ${MAYAN_{{ worker.name|upper }}_MAX_MEMORY_PER_CHILD} ${MAYAN_{{ worker.name|upper }}_MAX_TASKS_PER_CHILD}"
-killasgroup = true
-numprocs = 1
-priority = 998
-startsecs = 10
-stderr_logfile = /dev/fd/2
-stderr_logfile_maxbytes = 0
-stdout_logfile = /dev/fd/1
-stdout_logfile_maxbytes = 0
-stopwaitsecs = 1
-user = mayan
-{% endfor %}
-[program:mayan-edms-celery-beat]
-autorestart = false
-autostart = true
-command = nice -n 1 /bin/bash -c "${MAYAN_PYTHON_BIN_DIR}celery -A mayan beat --pidfile= -l ERROR"
-killasgroup = true
-numprocs = 1
-priority = 998
-stderr_logfile = /dev/fd/2
-stderr_logfile_maxbytes = 0
-stdout_logfile = /dev/fd/1
-stdout_logfile_maxbytes = 0
-startsecs = 10
-stopwaitsecs = 1
-user = mayan
+{% include "platform/partials/partial_supervisord.tmpl" %}
