Don't cache the missing items templates
Don't cache the templates results to allow it to be removed when
the missing item is fixed.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/common/templates/common/app/viewport.html
+++ b/mayan/apps/common/templates/common/app/viewport.html
@@ -10,6 +10,8 @@
     </div>
 {% endif %}
 
+{# appearance_app_template_nocache #}
+
 {% common_get_missing_items as missing_items %}
 
 {% if missing_items %}
