--- a/mayan/apps/platform/templates/platform/gitlab-ci.tmpl
+++ b/mayan/apps/platform/templates/platform/gitlab-ci.tmpl
@@ -11,7 +11,7 @@ stages:
 # Docker
 
 job_docker_build:
-  image: docker:20-dind
+  image: {{ DOCKER_DIND_IMAGE_VERSION }}
   only:
     - releases/all_major
     - releases/all_minor
@@ -22,26 +22,26 @@ job_docker_build:
     - DOCKER_VERSION=`cat docker/rootfs/version`
     - docker tag "mayanedms" "$CI_REGISTRY_IMAGE:$DOCKER_VERSION"
     - SERVICE_POSTGRES_IP=$(cat /etc/hosts | awk '{if ($2 == "postgres") print $1;}')
-    - docker run --rm --add-host="postgres:$SERVICE_POSTGRES_IP" -e MAYAN_DATABASES="{'default':{'ENGINE':'django.db.backends.postgresql_psycopg2','NAME':'mayan','USER':'mayan','PASSWORD':'mayanuserpass','HOST':'postgres'}}" "$CI_REGISTRY_IMAGE:$DOCKER_VERSION" run_tests
+    - docker run --rm --add-host="postgres:$SERVICE_POSTGRES_IP" -e MAYAN_DATABASES="{'default':{'ENGINE':'django.db.backends.postgresql_psycopg2','NAME':'{{ DEFAULT_DATABASE_NAME }}','USER':'{{ DEFAULT_DATABASE_USER }}','PASSWORD':'{{ DEFAULT_DATABASE_PASSWORD }}','HOST':'postgres'}}" "$CI_REGISTRY_IMAGE:$DOCKER_VERSION" run_tests
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker push "$CI_REGISTRY_IMAGE:$DOCKER_VERSION"
     - docker logout $CI_REGISTRY
   services:
-    - docker:20-dind
-    - postgres:10.15-alpine
+    - {{ DOCKER_DIND_IMAGE_VERSION }}
+    - {{ DOCKER_POSTGRES_IMAGE_VERSION }}
   stage: stage_build_docker
   tags:
     - postgres
   variables:
-    POSTGRES_DB: "mayan"
-    POSTGRES_PASSWORD: "mayanuserpass"
-    POSTGRES_USER: "mayan"
+    POSTGRES_DB: "{{ DEFAULT_DATABASE_NAME }}"
+    POSTGRES_PASSWORD: "{{ DEFAULT_DATABASE_PASSWORD }}"
+    POSTGRES_USER: "{{ DEFAULT_DATABASE_USER }}"
 
 job_docker_push_major:
   before_script:
     - apk add --no-cache python3
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-  image: docker:20-dind
+  image: {{ DOCKER_DIND_IMAGE_VERSION }}
   only:
     - releases/all_major
     - releases/docker_major
@@ -63,14 +63,14 @@ job_docker_push_major:
     - docker push registry-1.docker.io/mayanedms/mayanedms:s"$MAJOR_VERSION"
     - docker push registry-1.docker.io/mayanedms/mayanedms:s"$MINOR_VERSION"
   services:
-    - docker:20-dind
+    - {{ DOCKER_DIND_IMAGE_VERSION }}
   stage: stage_push_docker
 
 job_docker_push_minor:
   before_script:
     - apk add --no-cache python3
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-  image: docker:20-dind
+  image: {{ DOCKER_DIND_IMAGE_VERSION }}
   only:
     - releases/all_minor
     - releases/docker_minor
@@ -89,13 +89,13 @@ job_docker_push_minor:
     - docker push registry-1.docker.io/mayanedms/mayanedms:latest
     - docker push registry-1.docker.io/mayanedms/mayanedms:s"$MINOR_VERSION"
   services:
-    - docker:20-dind
+    - {{ DOCKER_DIND_IMAGE_VERSION }}
   stage: stage_push_docker
 
 job_docker_nightly:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-  image: docker:20-dind
+  image: {{ DOCKER_DIND_IMAGE_VERSION }}
   only:
     - releases/nightly
     - releases/staging
@@ -104,13 +104,13 @@ job_docker_nightly:
     - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
     - docker logout $CI_REGISTRY
   services:
-    - docker:20-dind
+    - {{ DOCKER_DIND_IMAGE_VERSION }}
   stage: stage_build_docker
 
 job_docker_testing:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-  image: docker:20-dind
+  image: {{ DOCKER_DIND_IMAGE_VERSION }}
   only:
     - releases/testing
   script:
@@ -120,7 +120,7 @@ job_docker_testing:
     - docker push "$CI_REGISTRY_IMAGE:$DOCKER_VERSION"
     - docker logout $CI_REGISTRY
   services:
-    - docker:20-dind
+    - {{ DOCKER_DIND_IMAGE_VERSION }}
   stage: stage_build_docker
 
 # Documentation
@@ -135,7 +135,7 @@ job_documentation_build:
     - apt-get install -qq enchant make python3-venv python3-dev
     - python3 -m venv venv
     - . venv/bin/activate
-  image:debian:10.9-slim
+  image: {{ DOCKER_LINUX_IMAGE_VERSION }}
   only:
     - releases/all_major
     - releases/documentation
@@ -154,7 +154,7 @@ job_documentation_push:
     - 'which ssh-agent || ( apt-get update --yes && apt-get install -qq openssh-client rsync --yes )'
     - eval $(ssh-agent -s)
     - echo "$DOCUMENTATION_SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
-  image: debian:10.9-slim
+  image: {{ DOCKER_LINUX_IMAGE_VERSION }}
   only:
     - releases/all_major
     - releases/documentation
@@ -177,7 +177,7 @@ job_python_build:
     - python3 -m venv venv
     - . venv/bin/activate
     - pip install pip==$PYTHON_PIP_VERSION
-  image: debian:10.9-slim
+  image: {{ DOCKER_LINUX_IMAGE_VERSION }}
   only:
     - releases/all_major
     - releases/all_minor
@@ -197,7 +197,7 @@ job_python_push_pypi:
     - python3 -m venv venv
     - . venv/bin/activate
     - pip install pip==$PYTHON_PIP_VERSION
-  image: debian:10.9-slim
+  image: {{ DOCKER_LINUX_IMAGE_VERSION }}
   only:
     - releases/all_major
     - releases/all_minor
@@ -230,7 +230,7 @@ job_python_push_pypi:
     paths:
       - ~/.cache/pip/
       - /var/cache/apt/archives/
-  image: debian:10.9-slim
+  image: {{ DOCKER_LINUX_IMAGE_VERSION }}
   only:
     - releases/all_major
     - releases/all_minor
@@ -252,14 +252,14 @@ job_mysql_upgrade_test:
     - pip install dist/mayan_edms-*.whl
     - mayan-edms.py performupgrade --settings=mayan.settings.testing.gitlab-ci.db_mysql
   services:
-    - mysql:8.0
+    - {{ DOCKER_MYSQL_IMAGE_VERSION }}
   tags:
     - mysql
   variables:
     MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-    MYSQL_DATABASE: "mayan"
-    MYSQL_PASSWORD: "mayanuserpass"
-    MYSQL_USER: "mayan"
+    MYSQL_DATABASE: "{{ DEFAULT_DATABASE_NAME }}"
+    MYSQL_PASSWORD: "{{ DEFAULT_DATABASE_PASSWORD }}"
+    MYSQL_USER: "{{ DEFAULT_DATABASE_USER }}"
 
 job_postgres_upgrade_test:
   <<: *job_base_upgrade_test
@@ -271,13 +271,13 @@ job_postgres_upgrade_test:
     - pip install dist/mayan_edms-*.whl
     - mayan-edms.py performupgrade --settings=mayan.settings.testing.gitlab-ci.db_postgres
   services:
-    - postgres:10.15-alpine
+    - {{ DOCKER_POSTGRES_IMAGE_VERSION }}
   tags:
     - postgres
   variables:
-    POSTGRES_DB: "mayan"
-    POSTGRES_PASSWORD: "mayanuserpass"
-    POSTGRES_USER: "mayan"
+    POSTGRES_DB: "{{ DEFAULT_DATABASE_NAME }}"
+    POSTGRES_PASSWORD: "{{ DEFAULT_DATABASE_PASSWORD }}"
+    POSTGRES_USER: "{{ DEFAULT_DATABASE_USER }}"
 
 job_sqlite_upgrade_test:
   <<: *job_base_upgrade_test
@@ -305,7 +305,7 @@ job_sqlite_upgrade_test:
     paths:
       - ~/.cache/pip/
       - /var/cache/apt/archives/
-  image: debian:10.9-slim
+  image: {{ DOCKER_LINUX_IMAGE_VERSION }}
   only:
     - releases/all_major
     - releases/all_minor
@@ -325,13 +325,13 @@ job_postgres_test:
     - make test-all SETTINGS=mayan.settings.testing.gitlab-ci.db_postgres
     - make test-all-migrations SETTINGS=mayan.settings.testing.gitlab-ci.db_postgres
   services:
-    - postgres:10.15-alpine
+    - {{ DOCKER_POSTGRES_IMAGE_VERSION }}
   tags:
     - postgres
   variables:
-    POSTGRES_DB: "mayan"
-    POSTGRES_PASSWORD: "mayanuserpass"
-    POSTGRES_USER: "mayan"
+    POSTGRES_DB: "{{ DEFAULT_DATABASE_NAME }}"
+    POSTGRES_PASSWORD: "{{ DEFAULT_DATABASE_PASSWORD }}"
+    POSTGRES_USER: "{{ DEFAULT_DATABASE_USER }}"
 
 job_sqlite_test:
   <<: *job_base_test
