Convert the Dockerfile into a platform template
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/platform/templates/platform/dockerfile.tmpl
+++ b/mayan/apps/platform/templates/platform/dockerfile.tmpl
@@ -5,7 +5,7 @@
 #              Mayan EDMS.
 ####
 
-FROM debian:10.9-slim as base_image
+FROM {{ DOCKER_LINUX_IMAGE_VERSION }} as base_image
 
 LABEL maintainer="Roberto Rosario roberto.rosario@mayan-edms.com"
 
