Use environment variables for database settings
Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/platform/templates/platform/gitlab-ci.tmpl
+++ b/mayan/apps/platform/templates/platform/gitlab-ci.tmpl
@@ -248,9 +248,10 @@ job_mysql_upgrade_test:
     - . venv/bin/activate
     - pip install mysqlclient==$PYTHON_MYSQL_VERSION
     - mysql -h"$MYSQL_PORT_3306_TCP_ADDR" -P"$MYSQL_PORT_3306_TCP_PORT" -uroot -p"$MYSQL_ENV_MYSQL_ROOT_PASSWORD" -e "set global character_set_server=utf8mb4;"
-    - mayan-edms.py initialsetup --settings=mayan.settings.testing.gitlab-ci.db_mysql
+    - export MAYAN_DATABASES="{'default':{'ENGINE':'django.db.backends.mysql','NAME':'{{ DEFAULT_DATABASE_NAME }}','PASSWORD':'{{ DEFAULT_DATABASE_PASSWORD }}','USER':'{{ DEFAULT_DATABASE_USER }}','HOST':'$MYSQL_PORT_3306_TCP_ADDR'}}"
+    - mayan-edms.py initialsetup --settings=mayan.settings.testing.gitlab-ci
     - pip install dist/mayan_edms-*.whl
-    - mayan-edms.py performupgrade --settings=mayan.settings.testing.gitlab-ci.db_mysql
+    - mayan-edms.py performupgrade --settings=mayan.settings.testing.gitlab-ci
   services:
     - {{ DOCKER_MYSQL_IMAGE_VERSION }}
   tags:
@@ -267,9 +268,10 @@ job_postgres_upgrade_test:
     - apt-get install -qq libpq-dev
     - . venv/bin/activate
     - pip install psycopg2==$PYTHON_PSYCOPG2_VERSION
-    - mayan-edms.py initialsetup --settings=mayan.settings.testing.gitlab-ci.db_postgres
+    - export MAYAN_DATABASES="{'default':{'ENGINE':'django.db.backends.postgresql','NAME':'{{ DEFAULT_DATABASE_NAME }}','PASSWORD':'{{ DEFAULT_DATABASE_PASSWORD }}','USER':'{{ DEFAULT_DATABASE_USER }}','HOST':'postgres'}}"
+    - mayan-edms.py initialsetup --settings=mayan.settings.testing.gitlab-ci
     - pip install dist/mayan_edms-*.whl
-    - mayan-edms.py performupgrade --settings=mayan.settings.testing.gitlab-ci.db_postgres
+    - mayan-edms.py performupgrade --settings=mayan.settings.testing.gitlab-ci
   services:
     - {{ DOCKER_POSTGRES_IMAGE_VERSION }}
   tags:
