Rotate the main menu accordion indicator on state
The indicator now points to the left when the panel is closed
and to the bottom when opened.

Signed-off-by: Roberto Rosario <roberto.rosario@mayan-edms.com>

--- a/mayan/apps/appearance/static/appearance/css/base.css
+++ b/mayan/apps/appearance/static/appearance/css/base.css
@@ -595,6 +595,10 @@ a i {
     padding-bottom: 0px;
 }
 
+#accordion-sidebar .collapsed .accordion-indicator {
+   transform: rotate(90deg);
+}
+
 #accordion-sidebar ul.list-unstyled {
     margin-bottom: 0px;
 }
