--- a/mayan/apps/documents/templates/documents/forms/widgets/page_carousel.html
+++ b/mayan/apps/documents/templates/documents/forms/widgets/page_carousel.html
@@ -6,7 +6,7 @@
             <a href="{% url widget.attrs.target_view page.pk %}">
                 {% with 'lazy-load-carousel' as image_classes %}
                 {% with page as instance %}
-                {% with widget.attrs.height as display_height %}
+                {% with widget.attrs.transformation_instance_list as transformation_instance_list %}
                     {% include 'documents/forms/widgets/page_image.html' %}
                 {% endwith %}
                 {% endwith %}
