--- a/mayan/apps/documents/templates/documents/forms/widgets/page_image.html
+++ b/mayan/apps/documents/templates/documents/forms/widgets/page_image.html
@@ -3,13 +3,13 @@
 {% load appearance_tags %}
 {% load converter_tags %}
 
-{% converter_get_object_image_data obj=instance width=image_width height=image_height zoom=image_zoom rotation=image_rotation as object_image_data %}
+{% converter_get_object_image_data obj=instance transformation_instance_list=transformation_instance_list as object_image_data %}
 
 <span class="instance-image-widget {{ container_class }}">
     <span class="spinner-container text-primary"
         style="height: {% if display_full_height %}100%{% else %}{{ display_height|default:150 }}px{% endif %}; display: block;"
     >
-        {% appearance_get_icon 'mayan.apps.documents.icons.icon_document_image_loading'  %}
+        {% appearance_get_icon 'mayan.apps.documents.icons.icon_document_image_loading' %}
     </span>
     <img
         alt="{% trans 'Document image' %}"
@@ -19,4 +19,3 @@
         style="{% if image_max_height %}max-height: {{ image_max_height }}; {% endif %}"
      />
 </span>
-
