--- a/mayan/apps/documents/templates/documents/forms/widgets/page_image.html
+++ b/mayan/apps/documents/templates/documents/forms/widgets/page_image.html
@@ -6,7 +6,8 @@
 {% converter_get_object_image_data obj=instance transformation_instance_list=transformation_instance_list as object_image_data %}
 
 <span class="instance-image-widget {{ container_class }}">
-    <span class="spinner-container text-primary"
+    <span
+        class="spinner-container text-primary"
         style="height: {% if display_full_height %}100%{% else %}{{ display_height|default:150 }}px{% endif %}; display: block;"
     >
         {% appearance_get_icon 'mayan.apps.documents.icons.icon_document_image_loading' %}
