--- a/mayan/apps/documents/templates/documents/forms/widgets/page_carousel.html
+++ b/mayan/apps/documents/templates/documents/forms/widgets/page_carousel.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-<div class="full-height scrollable" data-height-difference=230 id="carousel-container">
+<div class="full-height" data-height-difference=230 id="carousel-container">
     {% for page in widget.value.pages.all %}
         <div class="carousel-item">
             <a href="{% url widget.attrs.target_view page.pk %}">
